[package]
name = "bar-wlrs"
version = "2024.6.18"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
chrono = { version = "0.4.38", default-features = false, features = ["clock"] }
clap = { version = "4.5.7", features = ["cargo", "derive"] }
lazy_static = { version = "1.4.0", default-features = false }
log = "0.4.21"
pretty_env_logger = "0.5.0"
rusttype = "0.9.3"
smithay-client-toolkit = "0.18.1"
wayland-client = { version = "0.31.2", features = ["log"] }

[features]
debug = []
damage = []

