[package]
name = "wlrs-bar"
version = "2024.6.24"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
bitflags = "2.5.0"
chrono = { version = "0.4.38", default-features = false, features = ["clock"] }
clap = { version = "4.5.7", features = ["cargo", "derive"] }
log = "0.4.21"
num-traits = "0.2.19"
alsa = "0.9.0"
pretty_env_logger = "0.5.0"
rusttype = "0.9.3"
smithay-client-toolkit = "0.19.1"
sysinfo = { version = "0.30.12", default-features = false }
wayland-client = { version = "0.31.3", features = ["log"] }

[features]
default = ["widgets"]

widgets = ["clock", "workspaces", "updated-last", "battery", "cpu", "ram"]
clock = []
workspaces = []
updated-last = []
battery = []
cpu = []
ram = []
volume = []

# DEBUG FEATURES:
debug = ["outlines"]

# enable ALL the logs
the-flood-gate = ["textbox-logs", "icon-logs", "progress-logs", "clock-logs", "updated-last-logs", "battery-logs", "cpu-logs", "ram-logs"]

damage = []
# show outlines of every top level widget
outlines = []
all-outlines = ["outlines", "textbox-outlines-bounding", "icon-outlines", "progress-outlines", "workspaces-outlines", "cpu-outlines", "ram-outlines"]
# grows in size every frame
height-test = []

textbox-all = ["textbox-logs", "textbox-outlines"]
textbox-logs = []
textbox-outlines = ["textbox-outlines-bounding", "textbox-outlines-area", "textbox-outlines-used"]
textbox-outlines-bounding = []
textbox-outlines-area = []
textbox-outlines-used = []

icon-all = ["icon-logs", "icon-outlines"]
icon-logs = []
icon-outlines = []

progress-all = ["progress-logs", "progress-outlines"]
progress-logs = []
progress-outlines = []

debug-rect-draw = []
debug-rect-place-at = []

clock-all = ["clock", "clock-logs"]
clock-logs = []

workspaces-all = ["workspaces", "workspaces-logs", "workspaces-outlines"]
workspaces-logs = []
workspaces-outlines = []

updated-last-all = ["updated-last", "updated-last-logs"]
updated-last-logs = []

battery-all = ["battery", "battery-logs"]
battery-logs = []

cpu-all = ["cpu", "cpu-logs", "cpu-outlines"]
cpu-logs = []
cpu-outlines = []

ram-all = ["ram", "ram-logs", "ram-outlines"]
ram-logs = []
ram-outlines = []

volume-all = ["volume", "volume-logs", "volume-outlines", "volume-worker-logs"]
volume-logs = []
volume-outlines = []
volume-worker-logs = []
